# ntag424_sdm_provisioner

./: .gitignore  AGENTS.md  AN12196_CHANGEKEY_EXAMPLE.md  AN12343.md  AN12343_CHANGEKEY_ANALYSIS.md  APDU_ANALYSIS.md  ARCH.md  ARCHIVE_NOTE.md  ARDUINO_CHANGEFILESETTINGS_ANALYSIS.md  AUTHENTICATION_DELAY_FINDINGS.md  AUTH_FLOW_ANALYSIS.md  CHANGEKEY_EXPERIMENT_LOG.md  CHANGEKEY_SUCCESS.md  CHANGELOG.md  CURRENT_INVESTIGATION_STATUS.md  CURRENT_STEP.md  DELAY_COUNTER_CRITICAL_FINDING.md  EXAMPLE_22_UPDATED.md  FINAL_STATUS.md  FINDINGS_FOR_USER.md  FRESH_TAG_FINDINGS.md  HARDWARE_TEST_RESULTS.md  HOW_TO_RUN.md  ITERATION_PLAN.md  LESSONS.md  MINDMAP.md  OBJECTIVES.md  PHASE2_PROTOCOL_INVESTIGATION.md  PHASE3_COMPLETE.md  PROGRESS_SUMMARY.md  Plan.md  README.md  READY_FOR_TESTING.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  REFACTORING_LOG.md  REFACTORING_PLAN.md  REFACTORING_TOOL_ARCHITECTURE.md  Requirements.md  SDM_STATUS_SUMMARY.md  (+27 more)
.history/: AGENTS_20251007212911.md  AGENTS_20251018151306.md  AGENTS_20251018152241.md  AGENTS_20251018214558.md  AGENTS_20251018215020.md  AGENTS_20251018215101.md  AGENTS_20251018215127.md  AGENTS_20251028193453.md  AGENTS_20251028193502.md  AUTHENTICATION_DELAY_FINDINGS_20251029203154.md  AUTHENTICATION_DELAY_FINDINGS_20251029203346.md  AUTHENTICATION_DELAY_FINDINGS_20251029203348.md  AUTHENTICATION_DELAY_FINDINGS_20251029203350.md  AUTHENTICATION_INVESTIGATION_20251029202928.md  AUTHENTICATION_INVESTIGATION_20251029203107.md  BYTE_ALIGNMENT_INVESTIGATION_20251029211434.md  CURRENT_STEP_20251029220517.md  (+157 more)
(+847 files in other folders)
